# NFC_NCIHAL_libnfc-nci

./: Android.bp  Android.mk  OWNERS  README.md  README.md~  SCR.txt  TEST_MAPPING  src  utils
SN100x/conf/: libnfc-nci.conf
SN100x/src/: Android.bp
SN100x/utils/: Android.bp  config.cc  ringbuffer.cc
conf/: Android.bp  libnfc-nci.conf
flags/: Android.bp  flags.aconfig
halimpl/pn54x/: Android.mk  libnfc-brcm.conf  libnfc-brcm_NCI2_0.conf  libnfc-nxp-PN547C2_example.conf  libnfc-nxp-PN548C2_example.conf  libnfc-nxp-PN551_example.conf  libnfc-nxp-PN553_example.conf  libnfc-nxp-PN553_example_NCI2_0.conf  libnfc-nxp-PN557_example.conf  libnfc-nxp-PN65T_example.conf  libnfc-nxp-PN66T_example.conf  libnfc-nxp-PN67T_example.conf  libnfc-nxp-PN80T_example.conf  libnfc-nxp-PN80T_example_NCI2_0.conf  libnfc-nxp-PN80T_example_Ver2.conf  libnfc-nxp-PN81T_example.conf  libnfc-nxp_RF-PN547C2_example  libnfc-nxp_RF-PN548C2_example  libnfc-nxp_RF-PN551_example  libnfc-nxp_RF-PN553_example  libnfc-nxp_RF-PN66T_example.conf  libnfc-nxp_RF-PN80T_example.conf  libnfc-nxp_RF-PN81T_example.conf  nfc_nci.c
inc/: NfcExtensionApi.h  NfcExtensionConstants.h
inc/common/: NfcExtensionApi.h  (+1 more)
src/: Android.bp  nfca_version.h
tests/: Android.bp
tools/casimir/: .gitignore  Android.bp  Cargo.toml  README.rst  build.rs
tools/casimir/scripts/: rf_packets.py  t4at.py
tools/casimir/src/: controller.rs  main-grpc.rs  main.rs  nci_packets.pdl  packets.rs  rf_packets.pdl
tools/casimir/src/proto/: casimir.proto  mod.rs
utils/: Android.bp  config.cc  nfc_config.cc  ringbuffer.cc
(+583 files in other folders)
