[package]
name = "casimir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
argh = "0.1.10"
bytes = "1.4.0"
futures = "0.3.28"
pdl-runtime = "0.2.2"
thiserror = "1.0.40"
tokio = { version = "1.22", features = ["full", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
